# pret-a-submit

./: README.md  pyproject.toml
app/: settings.py  urls.py
app/paper_grader/: forms.py  models.py  tests.py  views.py
app/paper_grader/migrations/: 0003_alter_question_options_question_position_and_more.py  0006_auto_20260305_1056.py
app/paper_grader/templates/paper_grader/: base.html  conference_confirm_delete.html  conference_form.html  index.html  pdf.html  question_form.html  results.html
app/paper_grader/views/: __init__.py  index_views.py
app/static/css/: output.css
theme/static_src/: package-lock.json
theme/static_src/src/: styles.css
