[project]
name = "tfg-conference-paper-rater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "lucide[django]>=1.1.3",
    "pymupdf4llm>=0.2.0",
]

[dependency-groups]
dev = [
    "django-tailwind[cookiecutter,honcho,reload]>=4.3.1",
    "djlint>=1.36.4",
    "ruff>=0.14.2",
]
