[project]
name = "tfg-conference-paper-rater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-tailwind>=4.3.1",
    "lucide[django]>=1.1.3",
    "ollama>=0.6.1",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "django-tailwind[cookiecutter,honcho,reload]>=4.3.1",
    "djlint>=1.36.4",
    "honcho>=2.0.0",
    "ruff>=0.14.2",
]
